--- a/app/src/main/res/layout/sports_item_row.xml
+++ b/app/src/main/res/layout/sports_item_row.xml
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/MainLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/round_boder"
-    android:elevation="@dimen/_5dp"
-    android:padding="@dimen/_5dp"
-    android:orientation="vertical">
+    android:minHeight="@dimen/_55dp"
+    android:orientation="vertical"
+    app:cardCornerRadius="@dimen/_6dp"
+    app:cardElevation="@dimen/_4dp"
+    app:cardUseCompatPadding="true">
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/_5dp"
+        android:layout_gravity="center"
         android:orientation="horizontal"
-        android:padding="@dimen/_5dp">
+        android:padding="@dimen/_8dp">
 
         <ImageView
             android:id="@+id/matchPerview"
@@ -31,13 +31,13 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_weight="1"
-            android:padding="@dimen/_5dp"
             android:text="Crickect"
+            android:paddingBottom="@dimen/_4dp"
             android:textColor="@color/black"
-            android:textSize="@dimen/_14dp"
+            android:textSize="@dimen/_12dp"
             android:textStyle="bold" />
 
 
     </LinearLayout>
 
-</LinearLayout>
+</android.support.v7.widget.CardView>
